Added more emojis.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <h4 style="color: #a0a0a0">Favorite Comics</h4>
     <details  style="color: #a0a0a0">
     <ol>
-        <li>Mercy &#128299;</li>
-        <li>Squirrel Girl &#127943;</li>
-        <li>Teen Titans &#128125;</li>
+        <li>Mercy &#10024;</li>
+        <li>Squirrel Girl &#128063;</li>
+        <li>Teen Titans </li>
     </details>
     </ol>
 
@@ -30,7 +30,7 @@
     <details style="color: #a0a0a0">
         <ol style="color: #a0a0a0">
             <li>Apex Legends &#128299;</li>
-            <li>Eldin Ring &#127943;</li>
+            <li>Eldin Ring &#128481;</li>
             <li>XCOM &#128125;</li>
         </ol>
 
@@ -38,10 +38,10 @@
    
     <h4 style="color: #a0a0a0">Favorite Shows</h4>
     <details style="color: #a0a0a0">
-        <ol style="color: #a0a0a0">
-            <li>Avatar the Last Airbender &#128299;</li>
-            <li>South Park &#127943;</li>
-            <li>Wayne &#128125;</li>
+        <ol>
+            <li>Avatar the Last Airbender &#127786;</li>
+            <li>South Park &#129324;</li>
+            <li>Wayne &#128296;</li>
         </ol>
     </details>
     
